syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service HelloWorldService {
  rpc GetHelloWorld(HelloWorldRequest) returns (HelloWroldResponse) {};
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWroldResponse {
  string message = 2;
}